infrastructure/infrastructure.yaml
AWSTemplateFormatVersion: '2010-09-09'

Metadata:
  AWS::CloudFormation::Interface:
    ParameterGroups:
      -
        Label:
          default: "Infrastructure"
        Parameters:
          - vpccidr
          - publicsubnetacidr
          - publicsubnetbcidr
          - publicsubnetccidr
    ParameterLabels:
      vpccidr:
        default: "VPC CIDR"
      publicsubnetacidr:
        default: "Public subnet-a CIDR"
      publicsubnetbcidr:
        default: "Public subnet-b CIDR"
      publicsubnetccidr:
        default: "Public subnet-c CIDR"

Parameters:
  vpccidr:
    Type: String
    MinLength: 9
    MaxLength: 18
    AllowedPattern: "(\\d{1,3})\\.(\\d{1,3})\\.(\\d{1,3})\\.(\\d{1,3})/(\\d{1,2})"
    ConstraintDescription: Must be a valid CIDR range in the form x.x.x.x/16
    Default: 10.20.0.0/16
  publicsubnetacidr:
    Type: String
    MinLength: 9
    MaxLength: 18
    AllowedPattern: "(\\d{1,3})\\.(\\d{1,3})\\.(\\d{1,3})\\.(\\d{1,3})/(\\d{1,2})"
    ConstraintDescription: Must be a valid CIDR range in the form x.x.x.x/22
    Default: 10.20.0.0/22
  publicsubnetbcidr:
    Type: String
    MinLength: 9
    MaxLength: 18
    AllowedPattern: "(\\d{1,3})\\.(\\d{1,3})\\.(\\d{1,3})\\.(\\d{1,3})/(\\d{1,2})"
    ConstraintDescription: Must be a valid CIDR range in the form x.x.x.x/22
    Default: 10.20.4.0/22
  publicsubnetccidr:
    Type: String
    MinLength: 9
    MaxLength: 18
    AllowedPattern: "(\\d{1,3})\\.(\\d{1,3})\\.(\\d{1,3})\\.(\\d{1,3})/(\\d{1,2})"
    ConstraintDescription: Must be a valid CIDR range in the form x.x.x.x/22
    Default: 10.20.8.0/22	

Resources:
  VPC:
    Type: "AWS::EC2::VPC"
    Properties:
      CidrBlock: !Ref vpccidr
      Tags:
        - Key: Name
          Value: vpc
  IGW:
    Type: "AWS::EC2::InternetGateway"
    Properties:
      Tags:
        - Key: Name
          Value: igw
  VPCGatewayAttachment:
    Type: "AWS::EC2::VPCGatewayAttachment"
    Properties:
      InternetGatewayId: !Ref IGW
      VpcId: !Ref VPC

  PublisSubnetA:
    Type: "AWS::EC2::Subnet"
    Properties:
      AvailabilityZone: !Select [0, !GetAZs ]
      CidrBlock: !Ref publicsubnetacidr
      MapPublicIpOnLaunch: true
      VpcId: !Ref VPC
      Tags:
        - Key: Name
          Value: subnet-a
  PublisSubnetB:
    Type: "AWS::EC2::Subnet"
    Properties:
      AvailabilityZone: !Select [1, !GetAZs ]
      CidrBlock: !Ref publicsubnetbcidr
      MapPublicIpOnLaunch: true
      VpcId: !Ref VPC
      Tags:
        - Key: Name
          Value: subnet-b
  PublisSubnetC:
    Type: "AWS::EC2::Subnet"
    Properties:
      AvailabilityZone: !Select [2, !GetAZs ]
      CidrBlock: !Ref publicsubnetccidr
      MapPublicIpOnLaunch: true
      VpcId: !Ref VPC
      Tags:
        - Key: Name
          Value: subnet-c

  PublicRouteTable:
    Type: "AWS::EC2::RouteTable"
    Properties:
      VpcId: !Ref VPC
      Tags:
        - Key: Name
          Value: public-rtb
  PublicRouteTableRoute:
    Type: "AWS::EC2::Route"
    DependsOn: VPCGatewayAttachment
    Properties:
      DestinationCidrBlock: 0.0.0.0/0
      GatewayId: !Ref IGW
      RouteTableId: !Ref PublicRouteTable

  PublisSubnetAPublicRouteTable:
    Type: "AWS::EC2::SubnetRouteTableAssociation"
    Properties:
      RouteTableId: !Ref PublicRouteTable
      SubnetId: !Ref PublisSubnetA
  PublisSubnetBPublicRouteTable:
    Type: "AWS::EC2::SubnetRouteTableAssociation"
    Properties:
      RouteTableId: !Ref PublicRouteTable
      SubnetId: !Ref PublisSubnetB
  PublisSubnetCPublicRouteTable:
    Type: "AWS::EC2::SubnetRouteTableAssociation"
    Properties:
      RouteTableId: !Ref PublicRouteTable
      SubnetId: !Ref PublisSubnetC

  EIPNatGatewayA:
    Type: "AWS::EC2::EIP"
    DependsOn: VPCGatewayAttachment
    Properties:
      Domain: vpc
  NatGatewayA:
    Type: "AWS::EC2::NatGateway"
    Properties:
      AllocationId: !GetAtt EIPNatGatewayA.AllocationId
      SubnetId: !Ref PublisSubnetA
      Tags:
        - Key: Name
          Value: ngtw-a
  PrivateRouteTableA:
    Type: "AWS::EC2::RouteTable"
    Properties:
      VpcId: !Ref VPC
      Tags:
        - Key: Name
          Value: private-rtb-a
  PrivateRouteTableARoute:
    Type: "AWS::EC2::Route"
    Properties:
      DestinationCidrBlock: 0.0.0.0/0
      NatGatewayId: !Ref NatGatewayA
      RouteTableId: !Ref PrivateRouteTableA

  EIPNatGatewayB:
    Type: "AWS::EC2::EIP"
    DependsOn: VPCGatewayAttachment
    Properties:
      Domain: vpc
  NatGatewayB:
    Type: "AWS::EC2::NatGateway"
    Properties:
      AllocationId: !GetAtt EIPNatGatewayB.AllocationId
      SubnetId: !Ref PublisSubnetB
      Tags:
        - Key: Name
          Value: ngtw-b
  PrivateRouteTableB:
    Type: "AWS::EC2::RouteTable"
    Properties:
      VpcId: !Ref VPC
      Tags:
        - Key: Name
          Value: private-rtb-b
  PrivateRouteTableBRoute:
    Type: "AWS::EC2::Route"
    Properties:
      DestinationCidrBlock: 0.0.0.0/0
      NatGatewayId: !Ref NatGatewayB
      RouteTableId: !Ref PrivateRouteTableB

  EIPNatGatewayC:
    Type: "AWS::EC2::EIP"
    DependsOn: VPCGatewayAttachment
    Properties:
      Domain: vpc
  NatGatewayC:
    Type: "AWS::EC2::NatGateway"
    Properties:
      AllocationId: !GetAtt EIPNatGatewayC.AllocationId
      SubnetId: !Ref PublisSubnetC
      Tags:
        - Key: Name
          Value: ngtw-c
  PrivateRouteTableC:
    Type: "AWS::EC2::RouteTable"
    Properties:
      VpcId: !Ref VPC
      Tags:
        - Key: Name
          Value: private-rtb-c
  PrivateRouteTableCRoute:
    Type: "AWS::EC2::Route"
    Properties:
      DestinationCidrBlock: 0.0.0.0/0
      NatGatewayId: !Ref NatGatewayC
      RouteTableId: !Ref PrivateRouteTableC

Outputs:
  vpcid:
    Description: ID of Infrastructure VPC
    Value: !Ref VPC
    Export:
      Name: infra-vpc-id

  natgatewayaid:
    Description: ID of NAT Gateway A
    Value: !Ref NatGatewayA
  natgatewaybid:
    Description: ID of NAT Gateway B
    Value: !Ref NatGatewayB
  natgatewaycid:
    Description: ID of NAT Gateway C
    Value: !Ref NatGatewayC

  publicroutetable:
    Description: ID of Public Route Table
    Value: !Ref PublicRouteTable
    Export:
      Name: infra-public-rtb

  privateroutetablea:
    Description: ID of Private Route Table - A
    Value: !Ref PrivateRouteTableA
    Export:
      Name: infra-private-rtb-a
  privateroutetableb:
    Description: ID of Private Route Table - B
    Value: !Ref PrivateRouteTableB
    Export:
      Name: infra-private-rtb-b
  privateroutetablec:
    Description: ID of Private Route Table - C
    Value: !Ref PrivateRouteTableC
    Export:
      Name: infra-private-rtb-c
